Added verification for params & Status codes have been updated
